# robot_data_runner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/robot_data_runner/: __init__.py  check_policy.py  cli.py  cli_eval.py  config.py  episode_runner.py  mappers.py  policy_loader.py  runner.py  safety.py  task_specs.py
tests/: test_imports.py  test_task_specs.py
